04_Teste/exercicios_gerados/question_mdp_30_dois_nomes/version_3/full_program_output.txt
Traceback (most recent call last):
  File "<string>", line 2
    square area = side * side
           ^
SyntaxError: invalid syntax